--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,7 @@
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   {{!-- bootstrap yeti theme from https://bootswatch.com/ --}}
-  <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 </head>
 
 <body>
