--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,10 +20,13 @@
       <li class="nav-item">
         <a class="nav-link" href="/projects">Projects</a>
       </li>
+      <li>
+        <a class="nav-link" href="/courses/add">Add Course</a>
+      </li>
     </ul>
-
   </nav>
   {{{body}}}
 </body>
+<script src="/javascripts/main.js"></script>
 
 </html>
