--- a/views/projects/add.hbs
+++ b/views/projects/add.hbs
@@ -1,5 +1,4 @@
-<h1>{{title}}</h1>
-{{!-- <h1>Project Details</h1> --}}
+<h1>Project Details</h1>
 
 <form method="post">
    <fieldset>
@@ -12,7 +11,11 @@
    </fieldset>
    <fieldset>
       <label for="course" class="col-2">Course:</label>
-      <input name="course" id="course" required />
+      <select name="course" id="course">
+         {{#each courses}}
+         <option>{{this.courseCode}}</option>
+         {{/each}}
+      </select>
    </fieldset>
    <button class="offset-3 btn btn-primary">Save</button>
 </form>
