--- a/views/projects/index.hbs
+++ b/views/projects/index.hbs
@@ -3,17 +3,20 @@
 
 <table class="table table-striped table-hover">
    <thead>
-      <th>Name</th>
+      <th><a href="/projects/edit{{this._id}}">{{this.name}}</a></th>
       <th>Due Date</th>
       <th>Course</th>
-      <td>Status</td>
+      <th>Status</th>
+      <th>Actions</th>
       {{#each projects}}
       <tr>
          <td>{{this.name}}</td>
          <td>{{this.dueDate}}</td>
          <td>{{this.course}}</td>
          <td>{{this.status}}</td>
+         <td><a class="btn btn-danger" href="/courses/delete/{{this._id}}" onclick="return areYouSure();">Delete</a>
+         </td>
       </tr>
-      {{//each}}
+      {{/each}}
    </thead>
 </table>
