--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,9 +20,17 @@
       <li class="nav-item">
         <a class="nav-link" href="/projects">Projects</a>
       </li>
-      <li>
+      <li class="nav-item">
         <a class="nav-link" href="/courses/add">Add Course</a>
       </li>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+      </ul>
     </ul>
   </nav>
   {{{body}}}
