--- a/views/projects/index.hbs
+++ b/views/projects/index.hbs
@@ -3,18 +3,25 @@
 
 <table class="table table-striped table-hover">
    <thead>
-      <th><a href="/projects/edit{{this._id}}">{{this.name}}</a></th>
+      <th>Name</th>
       <th>Due Date</th>
       <th>Course</th>
       <th>Status</th>
       <th>Actions</th>
       {{#each projects}}
       <tr>
-         <td>{{this.name}}</td>
-         <td>{{this.dueDate}}</td>
+         <td>
+            <a href="/projects/edit/{{this._id}}">
+               {{this.name}}
+            </a>
+         </td>
+         <td>{{shortDate this.dueDate}}</td>
          <td>{{this.course}}</td>
          <td>{{this.status}}</td>
-         <td><a class="btn btn-danger" href="/courses/delete/{{this._id}}" onclick="return areYouSure();">Delete</a>
+         <td>
+            <a href="/projects/delete/{{this._id}}" class="btn btn-danger" onclick="return areYouSure();">
+               Delete
+            </a>
          </td>
       </tr>
       {{/each}}
