--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  {{!-- bootstrap basic navbar from https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp --}}
+  <!-- Bootstrap 4 navbar from https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp -->
   <nav class="navbar navbar-expand-sm bg-light">
     <!-- Links -->
     <ul class="navbar-nav">
