--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,5 @@
 <h1>Login</h1>
+
 {{#if messages}}
 <div class="alert alert-danger">
    Invalid Login
@@ -8,10 +9,11 @@
    Please enter your Credentials
 </div>
 {{/if}}
+
 <form method="post">
    <fieldset class="form-group">
       <label for="username" class="col-2 control-label">Username: *</label>
-      <input name="username" id="username" type="email" required />
+      <input name="username" id="username" required />
    </fieldset>
    <fieldset class="form-group">
       <label for="password" class="col-2 control-label">Password: *</label>
